change desc meta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Designing your database in an easy and convenient way with auto code generation and drag&drop UI"
+      content="Designing your database in an easy way with simple drag&drop and auto code generation."
     />
     <link
       rel="icon"
