--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😋</text></svg>"
     />
     <title>Quick SQL</title>
+    <style>
+      * {
+        outline: none !important;
+      }
+      *:focus {
+        outline: none !important;
+      }
+    </style>
   </head>
 
   <body>
