--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Designing your database model in an easy way."
+      content="Designing your database in an easy way."
     />
     <link
       rel="icon"
