--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
         outline: none !important;
       }
     </style>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-B7SD9G36LH"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-B7SD9G36LH");
+    </script>
   </head>
 
   <body>
