fix: enable ga script

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
           gtag("config", "G-B7SD9G36LH");
 
-          document.body.appendChild(script);
+          document.head.appendChild(script);
         };
       })()
     </script>
