--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script>
       (function() {
         if (import.meta.env.PROD) {
-          var script = document.createElement('scripts');
+          var script = document.createElement('script');
           script.src = 'https://www.googletagmanager.com/gtag/js?id=G-B7SD9G36LH';
           script.async = true;
 
