fix: remove overscroll behavior

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       *:focus {
         outline: none !important;
       }
+      body {
+        overscroll-behavior-x: none;
+        overscroll-behavior-y: none;
+      }
     </style>
 
     <script>
